--- a/codigo/requirements.txt
+++ b/codigo/requirements.txt
@@ -6,3 +6,6 @@ djangorestframework==3.9.4
 django-rest-framework-mongoengine==3.3.1
 django-cors-headers
 gunicorn
+dj-database-url==0.4.1
+psycopg2==2.6.2
+whitenoise==3.2.2
