Subiendo ficheros para usar gunicorn

--- a/codigo/docker-compose.yml
+++ b/codigo/docker-compose.yml
@@ -35,7 +35,9 @@ services:
 
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py makemigrations && python manage.py migrate && gunicorn composeexample.wsgi -b 0.0.0.0:8000"
+    #command: gunicorn composeexample.wsgi:application --bind 0.0.0.0:8000
+    # command: python manage.py runserver 0.0.0.0:8000
     #command: python manage.py makemigrations && python manage.py migrate && gunicorn composeexample.wsgi -b 0.0.0.0:8000
     volumes:
       - .:/code
